--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1"
   }
 }
